# rosetta-datahub

./: .env.example  .gitignore  .replit  Dockerfile  LICENSE  Procfile  README.md  pyproject.toml  render.yaml  requirements-demo.txt  requirements.txt
.devcontainer/: devcontainer.json
assets/devpost/: CAPTIONS.md
demo_data/: lineage.json  seed_definitions.json
docs/: DATAHUB_INGEST.md  DEMO_RECORDING_GUIDE.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEVPOST_SUBMISSION_WALKTHROUGH.md  GITHUB_REPO_POLISH.md  NARRATION_SCRIPT.docx  PROJECT_STRUCTURE.md  RENDER_DEPLOYMENT.md  SETUP.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  VIDEO_SHOOTING_SCRIPT.docx  VIDEO_VOICEOVER_SCRIPT.md
examples/: sample_conflict_report.json  sample_reconciled_term.json
examples/exports/: sample_report.csv  sample_report.html  sample_report.json  sample_report.md
rosetta/: __init__.py  broker.py  datahub_client.py  demo.py  detector.py  exporter.py  impact.py  orchestrator.py
scripts/: ingest_seed_to_datahub.py  live_demo.sh
skills/: detect-semantic-conflicts.md
tests/: test_rosetta.py
webapp/: app.py
webapp/static/css/: style.css
webapp/static/js/: app.js
webapp/templates/: index.html
